--- a/Mini Projetos/ex014 - Verificador de Idade/modelo.html
+++ b/Mini Projetos/ex014 - Verificador de Idade/modelo.html
@@ -17,7 +17,7 @@
             <!--ANO-->
             <p>Ano de nascimento:
                 <input type="number" name="txtano" id="txtano" min="0">
-                <img src="interro.png" alt="interrogação" title="Coloque o ano que nasceu!">
+                <img src="interro.png" alt="interrogação" title="Apenas o ano, exemplo: 2004">
             </p>
             <!--SEXO-->
             <p>Sexo:
